Redirect FIx Added Favicon Overflow chrome issues...

--- a/css/stylesM.css
+++ b/css/stylesM.css
@@ -21,12 +21,15 @@
 }
 body {
   background: var(--theme);
-  overflow: hidden
+  overflow: hidden;
+  max-width: 100vw;
 }
 
 main {  
     height: 100vh;
+    max-width: 100vw;
     overflow-y: scroll;
+    overflow-x: hidden;
     scroll-snap-type: y mandatory;
 }
 
@@ -113,6 +116,8 @@ body header, body section {
     background: var(--second);
     min-height: 100vh;
     height: auto;
+/*     overflow-x: auto; */
+/*     overflow-y: auto; */
   }
   section#papers {
     background: var(--fifth)
@@ -137,8 +142,8 @@ section#proyects div.pcontain {
   height: fit-content;
   justify-content: space-evenly;
   align-items: stretch;
-  overflow-x: scroll;
-  overflow-y:scroll;
+  overflow-x: auto;
+  overflow-y:auto;
   padding: 2em;
   margin-bottom: 5em;
 }
